# json_watcher_cpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
3rdp/: CMakeLists.txt  README  README.md
client_src/: ApWatchIMsgHandler.cpp  ApWatchIMsgHandler.h  CMakeLists.txt  ClientApp.cpp  ClientApp.h  ClientMain.cpp  ClientUI.cpp  ClientUI.h  MessageSubscriber.cpp  MessageSubscriber.h  MessageSubscriberI.h
common/: CMakeLists.txt  Log.h  Messaging.cpp  Messaging.h
common/log/: CMakeLists.txt
common/log/inc/: Log.h
common/message_interface/proto/: ApWatchI.proto
common/msg/: CMakeLists.txt  MessagePublisherI.h  ProtoBufGuard.cpp
common/msg/inc/: InterfaceIds.h  Message.h  MessageHandlerI.h  MessagePublisherI.h  MessageSubscriberI.h  Messaging.h  ProtoBufGuard.h
common/msg/proto/: ApWatchI.proto
common/msg/src/: MessagePublisher.cpp  MessagePublisher.h  MessageSendReceive.cpp  MessageSendReceive.h  MessageSubscriber.cpp  MessageSubscriber.h  Messaging.cpp  ProtoBufGuard.cpp
common/msg/tests/: CMakeLists.txt  Main.cpp  MessagePublisherTest.cpp  MessageSubscriberTest.cpp
common/msg/tests/mocks/: MockMessageHandler.h
sample_data/: access_points.json  e2e_test_1AP.json  e2e_test_1APmodified_ch.json  e2e_test_2APs.json  e2e_test_3APs.json  new_access_points.json
server_src/: AccessPointsData.cpp  AccessPointsData.h  AccessPointsDataI.h  CMakeLists.txt  ChangeToProtoMsgConverter.cpp  ChangeToProtoMsgConverter.h  FileMonitor.cpp  FileMonitor.h  FileMonitorI.h  JsonParser.cpp  JsonParser.h  JsonParserI.h  MessagePublisher.cpp  MessagePublisher.h  MessagePublisherI.h  ServerApp.cpp  ServerApp.h  ServerMain.cpp
server_src/tests/: AccessPointsDataTest.cpp  CMakeLists.txt  FileMonitorTest.cpp  JsonParserTest.cpp  Main.cpp  Makefile  MessagePublisherTest.cpp  ServerAppE2ETest.cpp  ServerAppTest.cpp  dummy_test.cpp
server_src/tests/mocks/: MockAccessPointsData.h  MockFactory.h  MockFileMonitor.h  MockFileMonitorFactory.cpp  MockFileMonitorFactory.h  MockFileObserver.h  MockJsonParser.h  MockMessagePublisher.h  MockMessagePublisherFactory.cpp  MockMessagePublisherFactory.h
